# Django_Project

./: README.md  pyproject.toml
blog/migrations/: 0001_initial.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_owner_product_status.py  0003_alter_product_options.py
config/: settings.py
users/migrations/: 0001_initial.py  0002_remove_customsuser_username.py
