[tool.poetry]
name = "django-project "
version = "0.1.0"
description = ""
authors = ["Yauheni Lampe <spakv49@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
pillow = "^11.0.0"
python-dotenv = "^1.0.1"
ipython = "^8.30.0"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
